[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slab-buddy-info"
version = "1.0.0"
description = "A Python tool to display Linux kernel slab and buddy allocator information."
authors = [
    { name = "pkaiy81", email = "pkaiy81@outlook.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["linux", "slab", "buddy", "allocator", "memory"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/pkaiy81/slab-buddy-info"

[tool.setuptools]
packages = ["slab_buddy_info"]

[tool.setuptools.entry-points.console_scripts]
slab-buddy-info = "slab_buddy_info.main:main"
